--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 
     <h3>Linki</h3>
 
-    <a href="http://">Odnośnik</a><a href="http://">Odnośnik</a>
-    <a href="http://">Odnośnik</a>
-
+    <p><a href="">Odnośnik</a><a href="">Odnośnik</a></p>
+    <p><a href="">Odnośnik</a></p>
+   
     <h3>Obrazek</h3>
 
-    <img src="facebook_14095973_781999431903511_2292861024102041470_n.png" alt="Akademia 108">
+    <img src="https://www.uj.edu.pl/image/journal/article?img_id=136309374&t=1492593473474" alt="Akademia 108">
     
 </body>
 </html>
